Fix issue with width on small screens

--- a/backend/client/src/main.scss
+++ b/backend/client/src/main.scss
@@ -47,7 +47,8 @@
         width: 40px;
       }
       input {
-        flex: 1 0 auto;
+        flex: 1 1 auto;
+        width: 0px;
         padding-top: 10px;
         font-size: 1.2em;
 
